[gd_scene load_steps=41 format=3 uid="uid://cc1m2a1obsyn4"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_uajkv"]
[ext_resource type="Material" uid="uid://c832cg6yrl8wm" path="res://materials/material_tagger.tres" id="2_h22dh"]
[ext_resource type="Script" path="res://FirstPersonController/addons/fpc/debug.gd" id="3_fepvu"]
[ext_resource type="Script" path="res://scripts/player_interactor.gd" id="3_glr05"]
[ext_resource type="Material" uid="uid://33bvkkcsxf6x" path="res://materials/material_hider.tres" id="3_gqwcm"]
[ext_resource type="Script" path="res://FirstPersonController/addons/fpc/EditorModule.gd" id="4_mwxu7"]
[ext_resource type="Script" path="res://scripts/player_input.gd" id="4_t3erj"]
[ext_resource type="AnimationNodeBlendTree" uid="uid://cmdlr7xcpbosy" path="res://resources/animation/BT_IdleWalkRun.tres" id="5_8263k"]
[ext_resource type="PackedScene" uid="uid://cme1citet8iai" path="res://scenes/items/flashlight.tscn" id="6_lvndv"]
[ext_resource type="PackedScene" uid="uid://dhedkm6pu187l" path="res://scenes/components/interaction_area.tscn" id="7_yd3o4"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_j60o4"]
albedo_color = Color(0.629847, 0.479353, 0.14129, 1)

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_6bmlt"]
properties/0/path = NodePath("PlayerInput:input_direction")
properties/0/spawn = false
properties/0/replication_mode = 1
properties/1/path = NodePath("PlayerInput:sprinting_just_pressed")
properties/1/spawn = false
properties/1/replication_mode = 1
properties/2/path = NodePath("PlayerInput:sprinting_pressed")
properties/2/spawn = false
properties/2/replication_mode = 1
properties/3/path = NodePath("PlayerInput:crouch_just_pressed")
properties/3/spawn = false
properties/3/replication_mode = 1
properties/4/path = NodePath("PlayerInput:crouch_pressed")
properties/4/spawn = false
properties/4/replication_mode = 1
properties/5/path = NodePath("PlayerInput:username")
properties/5/spawn = true
properties/5/replication_mode = 1

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_56ji0"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("Graphics:rotation")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath(".:playerType")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath(".:canMove")
properties/4/spawn = true
properties/4/replication_mode = 1
properties/5/path = NodePath(".:playerStatus")
properties/5/spawn = true
properties/5/replication_mode = 1
properties/6/path = NodePath("Head:rotation")
properties/6/spawn = true
properties/6/replication_mode = 1
properties/7/path = NodePath("FrozenIndicator:visible")
properties/7/spawn = true
properties/7/replication_mode = 1
properties/8/path = NodePath("Label_Username:text")
properties/8/spawn = true
properties/8/replication_mode = 1
properties/9/path = NodePath("IA_PlayerTag/PlayerTag_CollisionShape:disabled")
properties/9/spawn = true
properties/9/replication_mode = 1
properties/10/path = NodePath("IA_PlayerUnfreeze/PlayerUnfreeze_CollisionShape:disabled")
properties/10/spawn = true
properties/10/replication_mode = 1
properties/11/path = NodePath(".:player_id")
properties/11/spawn = true
properties/11/replication_mode = 1
properties/12/path = NodePath("Head:position")
properties/12/spawn = true
properties/12/replication_mode = 1
properties/13/path = NodePath(".:hiderColor")
properties/13/spawn = true
properties/13/replication_mode = 1
properties/14/path = NodePath("Head/PlayerInteractor:collision_mask")
properties/14/spawn = true
properties/14/replication_mode = 1
properties/15/path = NodePath("UserInterface/DebugPanel:visible")
properties/15/spawn = true
properties/15/replication_mode = 1
properties/16/path = NodePath(".:on_floor")
properties/16/spawn = true
properties/16/replication_mode = 1
properties/17/path = NodePath(".:was_on_floor")
properties/17/spawn = true
properties/17/replication_mode = 1
properties/18/path = NodePath(".:input_dir")
properties/18/spawn = true
properties/18/replication_mode = 1
properties/19/path = NodePath(".:low_ceiling")
properties/19/spawn = true
properties/19/replication_mode = 1
properties/20/path = NodePath(".:jump_animation")
properties/20/spawn = true
properties/20/replication_mode = 2
properties/21/path = NodePath(".:dynamic_fov")
properties/21/spawn = true
properties/21/replication_mode = 1
properties/22/path = NodePath(".:state")
properties/22/spawn = true
properties/22/replication_mode = 1
properties/23/path = NodePath(".:current_speed")
properties/23/spawn = true
properties/23/replication_mode = 1
properties/24/path = NodePath(".:current_animation")
properties/24/spawn = true
properties/24/replication_mode = 1
properties/25/path = NodePath(".:base_speed")
properties/25/spawn = true
properties/25/replication_mode = 1
properties/26/path = NodePath(".:speed")
properties/26/spawn = true
properties/26/replication_mode = 1
properties/27/path = NodePath(".:velocity")
properties/27/spawn = true
properties/27/replication_mode = 1
properties/28/path = NodePath(".:sprint_speed")
properties/28/spawn = true
properties/28/replication_mode = 1
properties/29/path = NodePath(".:play_jump_anim")
properties/29/spawn = true
properties/29/replication_mode = 2
properties/30/path = NodePath(".:jumping_enabled")
properties/30/spawn = true
properties/30/replication_mode = 1

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_o4lo6"]
albedo_color = Color(0.909804, 0.596078, 0, 1)
clearcoat_enabled = true
clearcoat_roughness = 0.2

[sub_resource type="CapsuleMesh" id="CapsuleMesh_jw1de"]
material = SubResource("StandardMaterial3D_o4lo6")
radius = 0.3
height = 1.727

[sub_resource type="CapsuleMesh" id="CapsuleMesh_vthlf"]
radius = 0.1
height = 0.8

[sub_resource type="BoxMesh" id="BoxMesh_3uy6v"]
size = Vector3(0.5, 0.3, 0.2)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_aavwn"]
animation = &"in_air"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_acqu8"]
animation = &"jump_land"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_5tjqw"]
animation = &"jump_start"
use_custom_timeline = true
timeline_length = 1.0
stretch_time_scale = true
start_offset = 0.0
loop_mode = 0

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xoctu"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_rq2o2"]
advance_mode = 2
advance_condition = &"jump"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_iit8y"]
advance_mode = 2
advance_condition = &"grounded"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_5yldr"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_03as7"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_531ou"]
states/BT_IWR/node = ExtResource("5_8263k")
states/BT_IWR/position = Vector2(425, 105)
states/in_air/node = SubResource("AnimationNodeAnimation_aavwn")
states/in_air/position = Vector2(537, -5)
states/jump_land/node = SubResource("AnimationNodeAnimation_acqu8")
states/jump_land/position = Vector2(639, 77)
states/jump_start/node = SubResource("AnimationNodeAnimation_5tjqw")
states/jump_start/position = Vector2(374, -5)
transitions = ["Start", "BT_IWR", SubResource("AnimationNodeStateMachineTransition_xoctu"), "BT_IWR", "jump_start", SubResource("AnimationNodeStateMachineTransition_rq2o2"), "in_air", "jump_land", SubResource("AnimationNodeStateMachineTransition_iit8y"), "jump_land", "BT_IWR", SubResource("AnimationNodeStateMachineTransition_5yldr"), "jump_start", "in_air", SubResource("AnimationNodeStateMachineTransition_03as7")]
graph_offset = Vector2(-78, -216)

[sub_resource type="Animation" id="Animation_gh776"]
resource_name = "RESET"
length = 0.001
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_bmpss"]
resource_name = "idle"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(),
"transitions": PackedFloat32Array(),
"update": 0,
"values": []
}

[sub_resource type="Animation" id="Animation_8ku67"]
resource_name = "sprint"
length = 2.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 1, 0, 1, 0),
"points": PackedFloat32Array(0.06, -0.25, 0, 0.25, -0.01, 0, 0, 0, 0, 0, -0.06, -0.25, 0.01, 0.25, 0.01, 0, 0, 0, 0, 0, 0.06, -0.25, -0.01, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(0.05, -0.25, 0, 0.2, -0.01, 0, -0.2, 0.000186046, 0.2, 0.000186046, 0.05, -0.2, -0.01, 0.2, -0.01, 0, -0.2, 0, 0.2, 0, 0.05, -0.2, -0.01, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}

[sub_resource type="Animation" id="Animation_lrqmv"]
resource_name = "walk"
length = 2.0
loop_mode = 1
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 1, 0, 1, 0),
"points": PackedFloat32Array(0.04, -0.25, 0, 0.25, 0, 0, 0, 0, 0, 0, -0.04, -0.25, 0, 0.25, 0, 0, 0, 0, 0, 0, 0.04, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0, 0),
"points": PackedFloat32Array(-0.05, -0.25, 0, 0.2, 0.005, 0, -0.2, 0.000186046, 0.2, 0.000186046, -0.05, -0.2, 0.005, 0.2, 0.005, 0, -0.2, 0, 0.2, 0, -0.05, -0.2, 0.005, 0.25, 0),
"times": PackedFloat32Array(0, 0.5, 1, 1.5, 2)
}

[sub_resource type="Animation" id="Animation_jhsur"]
resource_name = "jump_start"
length = 0.333
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.233333, 0.466667)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.005213, -0.214633, -0.216166, -0.0296245, 0.00612852, 0.077793, 0.0336594, 0.0473608, -0.0333333, 4.95631e-05, 0.0245608, -0.00612852, 0, -0.0333333, 0.000594759, 0.0333333, -4.95632e-05),
"times": PackedFloat32Array(0, 0.0713285, 0.181171, 0.333333)
}

[sub_resource type="Animation" id="Animation_0fi5x"]
resource_name = "jump_land"
length = 0.1
step = 0.01
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.0275, -0.00845782, -0.01, -0.03, 0.00154218, 0.09, -0.00128203, 1.47992e-05, -0.07, -0.00968299, 0.04, 0, -0.000186928, -0.03, 0.000201727, 0.25, 0),
"times": PackedFloat32Array(0.0025, 0.1, 0.4, 0.5)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0, 0, 0, 0),
"points": PackedFloat32Array(0, -0.25, 0, 0.0191143, -0.0844025, -0.00315876, -0.0413538, -0.205346, 0.084627, 0.320174, -0.000149879, -0.0602864, 0.306441, 0.0370229, -0.133281, -0.000186928, -0.0173633, -0.0688942, 0.0670985, 0.000564871),
"times": PackedFloat32Array(0, 0.1, 0.4, 0.5)
}

[sub_resource type="Animation" id="Animation_ex4ka"]
resource_name = "in_air"
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Camera:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(),
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Camera:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(),
"points": PackedFloat32Array(),
"times": PackedFloat32Array()
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_o0unb"]
_data = {
"RESET": SubResource("Animation_gh776"),
"idle": SubResource("Animation_bmpss"),
"in_air": SubResource("Animation_ex4ka"),
"jump_land": SubResource("Animation_0fi5x"),
"jump_start": SubResource("Animation_jhsur"),
"sprint": SubResource("Animation_8ku67"),
"walk": SubResource("Animation_lrqmv")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_uy03j"]
radius = 0.3
height = 1.727

[sub_resource type="Theme" id="Theme_wdf0f"]
MarginContainer/constants/margin_bottom = 10
MarginContainer/constants/margin_left = 10
MarginContainer/constants/margin_right = 10
MarginContainer/constants/margin_top = 10

[sub_resource type="SphereShape3D" id="SphereShape3D_k4wwl"]
radius = 0.25

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_raby1"]
transparency = 1
albedo_color = Color(0.502141, 0.441715, 0.991982, 0.407843)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_dhnk8"]
radius = 0.6
height = 2.1

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ufnxo"]

[node name="Player" type="CharacterBody3D" node_paths=PackedStringArray("HEAD", "GRAPHICS", "CAMERA", "HEADBOB_ANIMATION", "ANIMATION_TREE", "COLLISION_MESH", "tagInteractionArea", "unfreezeInteractionArea") groups=["player"]]
collision_mask = 7
script = ExtResource("1_uajkv")
base_speed = 2.0
sprint_speed = 4.0
HEAD = NodePath("Head")
GRAPHICS = NodePath("Graphics")
CAMERA = NodePath("Head/Camera")
HEADBOB_ANIMATION = NodePath("Head/FPS_AnimationPlayer")
ANIMATION_TREE = NodePath("Head/AnimationTree")
COLLISION_MESH = NodePath("Collision")
continuous_jumping = false
noneMaterial = SubResource("StandardMaterial3D_j60o4")
taggerMaterial = ExtResource("2_h22dh")
hiderMaterial = ExtResource("3_gqwcm")
tagInteractionArea = NodePath("IA_PlayerTag")
unfreezeInteractionArea = NodePath("IA_PlayerUnfreeze")

[node name="PlayerInput" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_6bmlt")
script = ExtResource("4_t3erj")

[node name="ServerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_56ji0")

[node name="Label_Username" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.41273, 0)
billboard = 1
text = "test"

[node name="Graphics" type="Node3D" parent="."]

[node name="Mesh" type="MeshInstance3D" parent="Graphics"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
mesh = SubResource("CapsuleMesh_jw1de")
skeleton = NodePath("../..")

[node name="LeftArm2" type="MeshInstance3D" parent="Graphics"]
transform = Transform3D(0.912663, -0.408713, 0, 0.408713, 0.912663, 0, 0, 0, 1, 0.394647, 1.0509, 0)
mesh = SubResource("CapsuleMesh_vthlf")
skeleton = NodePath("../..")

[node name="LeftArm3" type="MeshInstance3D" parent="Graphics"]
transform = Transform3D(0.940686, 0.33928, 0, -0.33928, 0.940686, 0, 0, 0, 1, -0.383155, 1.0509, 0)
mesh = SubResource("CapsuleMesh_vthlf")
skeleton = NodePath("../..")

[node name="Glasses" type="MeshInstance3D" parent="Graphics"]
transform = Transform3D(0.8, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 1.62939, -0.2098)
mesh = SubResource("BoxMesh_3uy6v")
skeleton = NodePath("../../Head")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0)

[node name="AnimationTree" type="AnimationTree" parent="Head"]
tree_root = SubResource("AnimationNodeStateMachine_531ou")
advance_expression_base_node = NodePath("../..")
anim_player = NodePath("../FPS_AnimationPlayer")
parameters/conditions/grounded = true
parameters/conditions/jump = false
parameters/BT_IWR/IWR_Blend/blend_position = 0.5
parameters/BT_IWR/IWR_TimeScale/scale = 1.0
parameters/BT_IWR/IWR_TimeSeek/seek_request = -1.0

[node name="Camera" type="Camera3D" parent="Head"]
fov = 90.0

[node name="FPS_AnimationPlayer" type="AnimationPlayer" parent="Head"]
libraries = {
"": SubResource("AnimationLibrary_o0unb")
}
blend_times = [&"RESET", &"RESET", 0.5, &"RESET", &"walk", 0.5, &"walk", &"RESET", 0.5]

[node name="PlayerInteractor" type="RayCast3D" parent="Head" node_paths=PackedStringArray("player", "interactLabel", "player_input")]
target_position = Vector3(0, 0, -1.5)
collision_mask = 16
collide_with_areas = true
script = ExtResource("3_glr05")
player = NodePath("../..")
interactLabel = NodePath("../../UserInterface/InteractText")
player_input = NodePath("../../PlayerInput")

[node name="ItemContainer" type="Node3D" parent="Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.478582)

[node name="Flashlight" parent="Head/ItemContainer" instance=ExtResource("6_lvndv")]

[node name="Item" parent="Head/ItemContainer/Flashlight" index="0" node_paths=PackedStringArray("playerInput")]
playerInput = NodePath("../../../../PlayerInput")

[node name="SpotLight3D" parent="Head/ItemContainer/Flashlight" index="1"]
spot_angle = 57.0452

[node name="Collision" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_uy03j")

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="DebugPanel" type="PanelContainer" parent="UserInterface"]
visible = false
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 453.0
offset_bottom = 50.0
theme = SubResource("Theme_wdf0f")
script = ExtResource("3_fepvu")

[node name="MarginContainer" type="MarginContainer" parent="UserInterface/DebugPanel"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UserInterface/DebugPanel/MarginContainer"]
layout_mode = 2

[node name="InteractText" type="Label" parent="UserInterface"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.5
offset_top = -55.0
offset_right = 128.5
grow_horizontal = 2
grow_vertical = 0
text = "E to Interact"
horizontal_alignment = 1
vertical_alignment = 1

[node name="CrouchCeilingDetection" type="ShapeCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.4, 0)
shape = SubResource("SphereShape3D_k4wwl")
target_position = Vector3(0, 0.5, 0)

[node name="EditorModule" type="Node" parent="."]
script = ExtResource("4_mwxu7")

[node name="FrozenIndicator" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01492, 0)
visible = false
material_override = SubResource("StandardMaterial3D_raby1")
mesh = SubResource("CapsuleMesh_dhnk8")
skeleton = NodePath("../IA_PlayerUnfreeze")

[node name="IA_PlayerTag" parent="." instance=ExtResource("7_yd3o4")]
collision_layer = 2147483648
actionName = "tag."

[node name="PlayerTag_CollisionShape" type="CollisionShape3D" parent="IA_PlayerTag"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0135, 0)
shape = SubResource("CapsuleShape3D_ufnxo")
disabled = true

[node name="IA_PlayerUnfreeze" parent="." instance=ExtResource("7_yd3o4")]
collision_layer = 1073741824
actionName = "unfreeze"

[node name="PlayerUnfreeze_CollisionShape" type="CollisionShape3D" parent="IA_PlayerUnfreeze"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.0135, 0)
shape = SubResource("CapsuleShape3D_ufnxo")
disabled = true

[editable path="Head/ItemContainer/Flashlight"]
